# voice-agent

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml  requirements.txt
scripts/: elevenlabs_agent.py  test_perception_client.py  test_webhook.py
src/voice_agent/: __init__.py  clerk.py  config.py  logging_config.py  main.py  perception_client.py  session.py  streaming.py  webhook.py
src/voice_agent/data/: __init__.py  base.py  mock.py  nuremberg_authorities.csv
static/: index.html
tests/: test_browser_integration.py  test_config.py  test_data.py  test_elevenlabs_agent.py  test_session.py  test_startup_import.py  test_webhook.py
