[project]
name = "voice-agent"
version = "0.1.0"
description = "Live voice demo for a German recognition-office clerk."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "openai==1.59.7",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"voice_agent.data" = ["*.csv"]
